fixing techstack component alignment in mobile moview and desktop v2

--- a/src/components/NavMenus/style.module.css
+++ b/src/components/NavMenus/style.module.css
@@ -40,7 +40,7 @@
 }
 
 /* mobile approach min-width */
-@media (width >= 45.875em) {
+@media (width >= 47em) {
   .hidden {
     position: absolute;
   }
